--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link rel="profile" href="http://microformats.org/profile/hcard">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 <style>
 html,
 body,
@@ -85,7 +85,7 @@ body {
   </div>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 <script>
 jQuery(function ($) {
 
@@ -101,11 +101,13 @@ jQuery(function ($) {
       var className = (i === 0) ? 'active' : '';
 
       $carouselIndicators.append([
-        '<li data-target="#carousel" data-slide-to="' + i + '" class="' + className + '"></li>'
+        '<li data-target="#carousel" data-slide-to="' + i + '" ',
+        'class="' + className + '"></li>'
       ].join(''));
 
       $carouselInner.append([
-        '<div class="item ' + className + '" style="background-image: url(/_images/' + this.id + ')">',
+        '<div class="item ' + className + '" ',
+        'style="background-image: url(/_images/' + this.id + ')">',
         '</div>'
       ].join(''));
     });
