--- a/www/index.html
+++ b/www/index.html
@@ -8,68 +8,23 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link rel="profile" href="http://microformats.org/profile/hcard">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-<style>
-html,
-body,
-#carousel,
-#carousel .carousel-inner,
-#carousel .carousel-inner .item {
-  height: 100%;
-}
+<link rel="stylesheet" href="style.css">
 
-body {
-  padding: 20px;
-}
+<script src="https://use.typekit.net/sqx8vpp.js"></script>
+<script>try{Typekit.load({ async: true });}catch(e){}</script>
 
-#carousel {
-  background-color: #222;
-}
-
-#carousel .carousel-inner .item {
-  min-height: 100%;
-  min-width: 100%;
-  height: 100%;
-  text-align: center;
-  background-repeat: no-repeat;
-  background-attachment: scroll;
-  background-position: center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
-#contact {
-  position: absolute;
-  right: 40px;
-  bottom: 40px;
-  padding: 0px 20px 20px;
-  background-color: rgba(255,255,255,0.9);
-  font-size: 0.8em;
-}
-
-#contact h1 {
-  font-size: 1.2em;
-}
-</style>
 </head>
 <body>
 
   <div id="carousel" class="carousel slide">
-    <!-- Indicators -->
-    <ol class="carousel-indicators hide"></ol>
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox"></div>
 
     <!-- Controls -->
     <a class="left carousel-control hide" href="#carousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
     </a>
     <a class="right carousel-control hide" href="#carousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
     </a>
   </div>
 
@@ -86,38 +41,6 @@ body {
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-<script>
-jQuery(function ($) {
-
-  var $carousel = $('#carousel');
-  var $carouselIndicators = $carousel.find('.carousel-indicators');
-  var $carouselInner = $carousel.find('.carousel-inner');
-  var $carouselControl = $carousel.find('.carousel-control');
-
-  $.getJSON('/_images', function (images, textStatus, xhr) {
-
-    $.each(images, function (i) {
-
-      var className = (i === 0) ? 'active' : '';
-
-      $carouselIndicators.append([
-        '<li data-target="#carousel" data-slide-to="' + i + '" ',
-        'class="' + className + '"></li>'
-      ].join(''));
-
-      $carouselInner.append([
-        '<div class="item ' + className + '" ',
-        'style="background-image: url(/_images/' + this.id + ')">',
-        '</div>'
-      ].join(''));
-    });
-
-    $carouselIndicators.removeClass('hide');
-    $carouselControl.removeClass('hide');
-    $carousel.carousel();
-  });
-
-});
-</script>
+<script src="main.js"></script>
 </body>
 </html>
