--- a/themes/default/index.html
+++ b/themes/default/index.html
@@ -9,34 +9,26 @@
 <link rel="profile" href="http://microformats.org/profile/hcard">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 <link rel="stylesheet" href="style.css">
-
-<script src="https://use.typekit.net/sqx8vpp.js"></script>
-<script>try{Typekit.load({ async: true });}catch(e){}</script>
-
 </head>
 <body>
 
   <div id="carousel" class="carousel slide">
-
-    <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox"></div>
 
-    <!-- Controls -->
-    <a class="left carousel-control hide" href="#carousel" role="button" data-slide="prev">
-    </a>
-    <a class="right carousel-control hide" href="#carousel" role="button" data-slide="next">
-    </a>
+    <a class="left carousel-control hide" href="#carousel" role="button" data-slide="prev"></a>
+    <a class="right carousel-control hide" href="#carousel" role="button" data-slide="next"></a>
   </div>
 
   <div id="contact" class="vcard">
-    <h1 class="fn">Román Bauer Arquitectos</h1>
+    <h1 class="fn">{{vcard.fn}}</h1>
     <div class="adr">
-      <div class="street-address">Avenida Grau 808</div>
-      <span class="locality">Lima</span> <span class="postal-code">00004</span>,
-      <span class="country-name">Perú</span>
+      <div class="street-address">{{vcard.adr.streetAddress}}</div>
+      <span class="locality">{{vcard.adr.locality}}</span>
+      <span class="postal-code">{{vcard.adr.postalCode}}</span>,
+      <span class="country-name">{{vcard.adr.countryName}}</span>
     </div>
-    <a class="email" href="mailto:info@romanbauer.org">info@romanbauer.org</a>
-    <div class="tel">+51.949350987</div>
+    <a class="email" href="mailto:{{vcard.email}}">{{vcard.email}}</a>
+    <div class="tel">{{vcard.tel}}</div>
   </div>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
