--- a/themes/default/index.html
+++ b/themes/default/index.html
@@ -7,16 +7,17 @@
 <meta name="description" content="{{description}}">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link rel="profile" href="http://microformats.org/profile/hcard">
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <div id="carousel" class="carousel slide">
+  <div id="carousel" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators"></ol>
     <div class="carousel-inner" role="listbox"></div>
 
-    <a class="left carousel-control hide" href="#carousel" role="button" data-slide="prev"></a>
-    <a class="right carousel-control hide" href="#carousel" role="button" data-slide="next"></a>
+    <a class="carousel-control-prev hide" href="#carousel" role="button" data-slide="prev"></a>
+    <a class="carousel-control-next hide" href="#carousel" role="button" data-slide="next"></a>
   </div>
 
   <div id="contact" class="vcard">
@@ -31,8 +32,10 @@
     <div class="tel">{{vcard.tel}}</div>
   </div>
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+
 <script src="main.js"></script>
 </body>
 </html>
